--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 .intestazione{
     background-color: lightcoral;
+    color: rgb(26, 23, 23);
+    text-align: center;
+
+    padding: 16px;
+
+    border-style: solid;
+    border-color: brown;
+    border-width: 16px;
+    border-radius: 30px;
+}
+
+.link-navigazione {
+    color: floralwhite;
+    font-weight: bold;
+}
+
+.Foot{
+    position: absolute;
+    top: 6px;
+    left: 570px;
+    border-radius: 60px;
 }
